--- a/portfolio site/index.html
+++ b/portfolio site/index.html
@@ -1,10 +1,25 @@
+ <!-- Portfolio project for github -->
+ <!-- Copyright karlsune GNU GPLv3 -->
 <!DOCTYPE html>
 <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Site</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Portfolio Site | karlsune</title>
 </head>
+    <style>
+
+    </style>
 
 <body>
-    
+
+    <header>
+
+    </header>
+
+    <main>
+
+    </main>
+
+
+
 </body>
