--- a/portfolio site/index.html
+++ b/portfolio site/index.html
@@ -1,7 +1,8 @@
  <!-- Portfolio project for github -->
  <!-- Copyright karlsune GNU GPLv3 -->
 <!DOCTYPE html>
-<head lang="en">
+<html lang="en">
+<head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Portfolio Site | karlsune</title>
@@ -19,7 +20,15 @@
     <main>
 
     </main>
+    
+    <footer>
 
+    </footer>
+
+    <script>
+
+    </script>
 
 
 </body>
+</html>
