refactor: update portfolio site content and navigation structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
- <!-- Portfolio project for github -->
- <!-- Copyright karlsune GNU GPLv3 -->
+  <!--
+    This is a simple portfolio site for karlsune.
+    It is designed to be minimalistic and easy to navigate.
+    The site is built with HTML, CSS, and JavaScript.
+    It is responsive and works on all devices.
+    The site is hosted on GitHub Pages.
+    The source code is available on GitHub.
+    Feel free to contribute and make it better!
+    The site is licensed under the GNU GPLv3 license.
+    You can find the license file in the root directory of the project.
+    If you have any questions or suggestions, feel free to open an issue on GitHub.
+    Thank you for visiting my portfolio site!
+    -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,16 +43,39 @@
         <h1>Karlsune</h1>
         <p><span id="typewriter"></span><span class="cursor"></span></p>
         <nav>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="#about">#about</a>
+            <a href="#education">#education</a>
+            <a href="#experience">#experience</a>
+            <a href="#skills">#skills</a>
+            <a href="#links">#links</a>
         </nav>
     </header>
 
     <main>
 
+        <section id="about">
+            <h2>#about</h2>
+            <p>hi. I'm a computer guy</p>
+            <p>level: 26</p>
+            <p>i'm a student at <a href="kth.se">kth</a></p>
+        </section>
+
+        <section id="education">
+            <h2>#education</h2>
+            <p>High School Diploma</p>
+        </section>
+
+        <section id="experience">
+            <h2>#experience</h2>
+            <p>none,</p>
+            <p>but I'm looking for an 'praktikplats'</p>
+        </section>
+
+        <section id="skills">
+            <h2>#skills</h2>
+            <p>HTML, CSS, JS</p>
+            <p>Linux, Windows</p>
+            <p>Git, GitHub</p>
     </main>
     
     <footer>
