--- a/index.html
+++ b/index.html
@@ -1,17 +1,3 @@
-  <!--
-    This is a simple portfolio site for karlsune.
-    It is designed to be minimalistic and easy to navigate.
-    The site is built with HTML, CSS, and JavaScript.
-    It is responsive and works on all devices.
-    The site is hosted on GitHub Pages.
-    The source code is available on GitHub.
-    Feel free to contribute and make it better!
-    The site is licensed under the GNU GPLv3 license.
-    You can find the license file in the root directory of the project.
-    If you have any questions or suggestions, feel free to open an issue on GitHub.
-    Thank you for visiting my portfolio site!
-    -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,27 +5,128 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Portfolio Site | karlsune</title>
 </head>
-    <style>
-
-
-        * {
-            box-sizing: border-box;
-            scroll-behavior: smooth;
+<style>
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        font-family: system-ui, sans-serif;
+        background: #f0f0f0;
+        color: #333;
+    }
+    header, main, footer {
+        width: 100%;
+        max-width: 600px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    header {
+        padding: 1rem 0;
+        background: #f0f0f0;
+        border-bottom: 1px solid #ccc;
+    }
+    header h1, header p {
+        text-align: center;
+        width: 100%;
+    }
+    header nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+        width: 100%;
+    }
+    header nav a {
+        text-decoration: none;
+        color: #333;
+        font-size: 1.1rem;
+    }
+    header nav a:hover {
+        text-decoration: underline;
+    }
+    header .theme-toggle, header .menu-btn {
+        align-self: center;
+        margin: 0.5rem 0;
+    }
+    main {
+        padding: 1rem 0;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    section {
+        width: 100%;
+        max-width: 600px;
+        margin-bottom: 2rem;
+        text-align: center;
+    }
+    section h2 {
+        font-size: 1.5rem;
+        margin-bottom: 0.5rem;
+    }
+    section p {
+        margin: 0.5rem 0;
+    }
+    footer {
+        padding: 1rem 0;
+        background: #f0f0f0;
+        border-top: 1px solid #ccc;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    footer section {
+        width: 100%;
+        text-align: center;
+    }
+    .cursor {
+        display: inline-block;
+        width: 10px;
+        height: 20px;
+        background-color: black;
+        animation: blink 1s infinite;
+    }
+    @keyframes blink {
+        0%, 100% { opacity: 1; }
+        50% { opacity: 0; }
+    }
+    /* Responsive: everything is already stacked, just adjust padding for small screens */
+    @media (max-width: 600px) {
+        header, main, footer, section {
+            max-width: 100vw;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
         }
-
-        body {
-            margin: 0;
-            font-family: system-ui, sans-serif;
-            
-
-        }
-    </style>
+    }
+    /* Dark theme support */
+    .dark-theme, .dark-theme body {
+        background-color: #121212;
+        color: #fff;
+    }
+    .dark-theme header, .dark-theme footer {
+        background-color: #1e1e1e;
+        border-color: #333;
+    }
+    .dark-theme header nav a, .dark-theme footer h2, .dark-theme footer p {
+        color: #fff;
+    }
+</style>
 
 <body>
 
     <header>
-        <button class="theme-toggle">☀️🌙</button>
-        <button class="menu-btn">☰ Menu</button>
+        <button class="theme-toggle">theme</button>
         <h1>Karlsune</h1>
         <p><span id="typewriter"></span><span class="cursor"></span></p>
         <nav>
@@ -55,9 +142,9 @@
 
         <section id="about">
             <h2>#about</h2>
-            <p>hi. I'm a computer guy</p>
+            <p>hi. i'm guy</p>
             <p>level: 26</p>
-            <p>i'm a student at <a href="kth.se">kth</a></p>
+            <p>i'm a student at <a href="https://www.kth.se/">kth</a></p>
         </section>
 
         <section id="education">
@@ -73,17 +160,46 @@
 
         <section id="skills">
             <h2>#skills</h2>
-            <p>HTML, CSS, JS</p>
-            <p>Linux, Windows</p>
-            <p>Git, GitHub</p>
+            <p>html, css, js</p>
+            <p>linux, windows</p>
+            <p>git, gitHub</p>
     </main>
     
     <footer>
-
+        <section id="links">
+            <h2>#links</h2>
+            <p><a href="">github</a></p>
+            <p><a href="">linkedin</a></p>
+            <p><a href="#top">top</a></p>
     </footer>
 
     <script>
+        const typewriterText = "Web Developer | Student | Open Source Enthusiast";
+        const typewriterElement = document.getElementById("typewriter");
+        let index = 0;
 
+        function type() {
+            if (index < typewriterText.length) {
+                typewriterElement.textContent += typewriterText.charAt(index);
+                index++;
+                setTimeout(type, 100);
+            }
+        }
+
+        type();
+
+        // Theme toggle
+        const themeToggle = document.querySelector('.theme-toggle');
+        themeToggle.addEventListener('click', () => {
+            document.body.classList.toggle('dark-theme');
+            themeToggle.textContent = document.body.classList.contains('dark-theme') ? '🌙' : '☀️';
+        });
+
+        // Menu button
+        const menuBtn = document.querySelector('.menu-btn');
+        menuBtn.addEventListener('click', () => {
+            document.querySelector('nav').classList.toggle('active');
+        });
     </script>
 
 
