refactor: update site subtitle with new phrases for enhanced engagement

--- a/index.html
+++ b/index.html
@@ -414,8 +414,13 @@
             "minimalist",
             "student @ kth",
             "always learning",
-            "vim, but sometimes nano",
-            "dark theme enthusiast"
+            "i use arch btw 😉",
+            "dark theme enthusiast",
+            "practicing web dev",
+            "looking for a 'praktikplats'",
+            "exploring new tech",
+            "building cool stuff",
+            "will code for coffee",
         ];
         let subtitleIndex = 0;
         const subtitleEl = document.getElementById('site-subtitle');
