refactor: update experience section and enhance subtitle phrases for clarity

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <section id="experience">
             <h2>#experience</h2>
             <p>none,</p>
-            <p>but I'm looking for an 'praktikplats' at a swedish company</p>
+            <p>but I'm looking for 'praktikplats'</p>
         </section>
         <section id="skills">
             <h2>#skills</h2>
@@ -408,16 +408,16 @@
 
         // Fun subtitle rotator with typewriter effect
         const subtitles = [
-            "web developer",
-            "linux enjoyer",
-            "open source fan",
-            "minimalist",
-            "student @ kth",
+            "web dev amateur.",
+            "linux enjoyer.",
+            "open source fan.",
+            "minimalist.",
+            "student @ kth.org",
             "always learning",
-            "i use arch btw 😉",
+            "i use arch btw",
             "dark theme enthusiast",
-            "practicing web dev",
-            "looking for a 'praktikplats'",
+            "noob web dev",
+            "looking for 'praktikplats'",
             "exploring new tech",
             "building cool stuff",
             "will code for coffee",
