refactor: adjust header and footer width to 100% for consistency

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             background: var(--light-bg);
         }
         header {
-            width: 100vw;
+            width: 100%;
             min-height: 44px;
             background: var(--light-header);
             color: var(--light-text);
@@ -145,7 +145,7 @@
         }
         /* Footer styled like header */
         footer {
-            width: 100vw;
+            width: 100%;
             min-height: 44px;
             background: var(--light-header);
             color: var(--light-text);
@@ -342,7 +342,6 @@
             <a href="#education">#education</a>
             <a href="#experience">#experience</a>
             <a href="#skills">#skills</a>
-            <a href="#links">#links</a>
         </nav>
     </header>
 
