refactor: update subtitle phrases

--- a/index.html
+++ b/index.html
@@ -453,17 +453,17 @@
         const subtitles = [
             "web dev amateur.",
             "linux enjoyer.",
-            "open source fan.",
-            "minimalist.",
+            "open source.",
+            "maximalist",
             "student @ kth.org",
-            "always learning",
+            "learning",
             "i use arch btw",
-            "dark theme enthusiast",
-            "noob web dev",
+            "dark theme",
+            "noob dev",
             "looking for 'praktikplats'",
-            "exploring new tech",
-            "building cool stuff",
-            "will code for coffee",
+            "exploring tech",
+            "building stuff",
+            "will code for coinies",
         ];
         let subtitleIndex = 0;
         const subtitleEl = document.getElementById('site-subtitle');
