refactor: remove dark theme class from body and update content

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         }
     </style>
 </head>
-<body class="dark-theme">
+<body>
     <!--
         HEADER: Contains navigation, theme toggle, and menu button for mobile.
     -->
@@ -458,7 +458,6 @@
             "student @ kth.org",
             "learning",
             "i use arch btw",
-            "dark theme",
             "noob dev",
             "looking for 'praktikplats'",
             "exploring tech",
