refactor: update experience section text for clarity

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         <section id="experience">
             <h2>#experience</h2>
             <p>none,</p>
-            <p>i'm looking for 'praktikplats'</p>
+            <p>looking for 'praktikplats'</p>
         </section>
         <section id="skills">
             <h2>#skills</h2>
