--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             <h2>#about</h2>
             <p>karlsune</p>
             <p>level: 26</p>
-            <p>i'm studying at <a href="https://www.kth.se/">kth</a></p>
+            <p>i'm studying at <a href="https://www.kth.se/en">kth</a></p>
         </section>
         <section id="education">
             <h2>#education</h2>
