--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         </section>
         <section id="education">
             <h2>#education</h2>
-            <p>High School Diploma</p>
+            <p>high school diploma</p>
         </section>
         <section id="experience">
             <h2>#experience</h2>
@@ -410,7 +410,7 @@
         <section id="skills">
             <h2>#skills</h2>
             <p>html, css, js</p>
-            <p>linux, windows</p>
+            <p>windows, linux</p>
             <p>git, gitHub</p>
         </section>
     </main>
