fix: restore license notice in index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!--
+===============================================================================
+    LICENSE NOTICE
+
+    This website is open source and free to use under the GNU General Public License v3 (GPLv3).
+    You may copy, modify, and distribute this code as long as you comply with the GPLv3 terms.
+    See LICENSE.md or https://www.gnu.org/licenses/gpl-3.0.html for details.
+
+    Some code on this site was generated with the help of AI (GitHub Copilot).
+    See https://github.com/features/copilot for more information about AI-generated code.
+===============================================================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
