--- a/index.html
+++ b/index.html
@@ -491,12 +491,19 @@
         const themeToggle = document.querySelector('.theme-toggle');
         function updateThemeIcon() {
             themeToggle.textContent = document.body.classList.contains('dark-theme') ? '🌙' : '☀️';
+            themeToggle.setAttribute('aria-pressed', document.body.classList.contains('dark-theme'));
         }
+        // On load, check localStorage
+        if (localStorage.getItem('theme') === 'dark') {
+            document.body.classList.add('dark-theme');
+        }
+        updateThemeIcon();
         themeToggle.addEventListener('click', () => {
             document.body.classList.toggle('dark-theme');
+            // Save preference
+            localStorage.setItem('theme', document.body.classList.contains('dark-theme') ? 'dark' : 'light');
             updateThemeIcon();
         });
-        updateThemeIcon();
 
         // =========================
         // MOBILE MENU TOGGLE
