--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     </div>
 
     <!--
-        HEADER: Contains navigation, theme toggle, and menu button for mobile.
+        HEADER: Contains navigation, theme toggle, and menu button for mobile. test
     -->
     <header>
         <!-- Menu toggle button for mobile navigation -->
