--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
                 <li>windows</li>
                 <li>git</li>
                 <li>github</li>
+                <li>gaming</li>
             </ul>
         </section>
     </main>
