--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     Some code on this site was generated with the help of AI (GitHub Copilot).
     See https://github.com/features/copilot for more information about AI-generated code.
+
 ===============================================================================
 -->
 
@@ -132,118 +133,17 @@
     </footer>
 
     <!-- Back to top button -->
-    <button id="back-to-top" aria-label="Back to top" style="display:none;position:fixed;bottom:2rem;right:2rem;z-index:10000;padding:0.7rem 1.2rem;border-radius:50%;background:#1976d2;color:#fff;border:none;font-size:1.5rem;box-shadow:0 2px 8px #0003;cursor:pointer;">↑</button>
+    <button id="back-to-top" aria-label="Back to top">top</button>
 
     <!--
         JAVASCRIPT: Handles theme toggle, mobile menu, and animated subtitle.
     -->
-    <script defer>
-
-        // =========================
-        // MOBILE MENU TOGGLE
-        // =========================
-        const menuToggle = document.querySelector('.menu-toggle');
-        const nav = document.getElementById('main-nav');
-        menuToggle.addEventListener('click', () => {
-            nav.classList.toggle('open');
-            // Update aria-expanded for accessibility
-            menuToggle.setAttribute('aria-expanded', nav.classList.contains('open') ? 'true' : 'false');
-        });
-
-        // Close menu on nav link click (mobile)
-        document.querySelectorAll('header nav a').forEach(link => {
-            link.addEventListener('click', () => {
-                nav.classList.remove('open');
-            });
-        });
-
-        // =========================
-        // ANIMATED SUBTITLE (TYPEWRITER EFFECT)
-        // =========================
-        const subtitles = [
-            "web dev amateur.",
-            "linux enjoyer.",
-            "open source.",
-            "maximalist.",
-            "student @ kth.org.",
-            "learning.",
-            "i use arch btw.",
-            "noob dev.",
-            "looking for 'praktikplats'.",
-            "tech.",
-            "stuff.",
-            "will code for coinies.",
-            "all i want is monies.",
-            "gimme monies.",
-            "i love money."
-        ];
-        let subtitleIndex = 0;
-        const subtitleEl = document.getElementById('site-subtitle');
-
-        // Helper to set subtitle text with blinking cursor
-        function setSubtitleWithCursor(text) {
-            subtitleEl.innerHTML = `<span class="subtitle-text">${text}</span><span class="subtitle-cursor">▌</span>`;
-        }
-
-        // Typewriter effect with persistent blinking cursor
-        function typeSubtitle(text, cb) {
-            let i = 0;
-            function type() {
-                setSubtitleWithCursor(text.slice(0, i));
-                if (i < text.length) {
-                    i++;
-                    setTimeout(type, 55);
-                } else if (cb) {
-                    setTimeout(cb, 900);
-                }
-            }
-            type();
-        }
-
-        // Cycle to next subtitle
-        function nextSubtitle() {
-            subtitleIndex = (subtitleIndex + 1) % subtitles.length;
-            typeSubtitle(subtitles[subtitleIndex], () => {
-                setTimeout(nextSubtitle, 1200);
-            });
-        }
-
-        // Start the animation on page load
-        typeSubtitle(subtitles[subtitleIndex], () => {
-            setTimeout(nextSubtitle, 1200);
-        });
-
-        // Content Warning Modal logic
-        const modal = document.getElementById('content-warning-modal');
-        const acceptBtn = document.getElementById('content-warning-accept');
-        if (modal && acceptBtn) {
-            acceptBtn.onclick = () => {
-                modal.classList.add('hide');
-                setTimeout(() => { modal.style.display = 'none'; }, 400);
-            };
-        }
-
-        // =========================
-        // BACK TO TOP BUTTON
-        // =========================
-        const backToTop = document.getElementById('back-to-top');
-        window.addEventListener('scroll', () => {
-            if (window.scrollY > 200) {
-                backToTop.style.display = 'block';
-            } else {
-                backToTop.style.display = 'none';
-            }
-        });
-        backToTop.addEventListener('click', () => {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        });
-
-    </script>
+    <script defer src="./script/script.js"></script>
 
     <noscript>
-      <div style="background:#ffbaba;color:#222;padding:1.5rem;text-align:center;font-family:'JetBrains Mono',monospace;">
+      <div id="noScriptWarn">
         <strong>Notice:</strong> This site works best with JavaScript enabled.<br>
-        Some features (like theme switching and animated subtitle) require JavaScript.
+        Some features require JavaScript.
       </div>
     </noscript>
 </body>
