refactor: clean up CSS comments and remove unused Code Citations document

--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!--
 ===============================================================================
 
-    WELCOME...
-
-    THIS IS MY MONSTER...
-
-    HOPE YOU CAN ENJOY YOUR STAY
-
     LICENSE NOTICE
 
     This website is open source and free to use under the GNU General Public License v3 (GPLv3).
@@ -51,6 +45,7 @@
         <button id="content-warning-accept">I understand</button>
       </div>
     </div>
+    -->
     
 
     <!--
@@ -64,7 +59,7 @@
         aria-controls="main-nav"
         aria-expanded="false"
       >
-        &#9776;
+        &#9776; <!--hamburger menu-->
       </button>
       <!-- Main navigation with accessible landmark and id -->
       <nav id="main-nav" aria-label="Main site navigation">
