--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
           <li>git</li>
           <li>github</li>
           <li>gaming</li>
+          <li>web design</li>
+        </ul>
+        <ul class="skills-list">
+            <li>commit message poet</li>
         </ul>
       </section>
     </main>
