--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio Site | karlsune</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     
-    <!-- JetBrains Mono font from Google Fonts -->
+    <link rel="icon" href="./icon/icon.ico">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap"
       rel="stylesheet"
