--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     <!--
         JAVASCRIPT: Handles theme toggle, mobile menu, and animated subtitle.
     -->
+    <script src="./script/subtitleRender.js"></script>
     <script src="./script/array.js"></script>
     <script defer src="./script/main.js"></script>
 
