--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <a href="#about">#about</a>
         <a href="#education">#education</a>
         <a href="#stats">#stats</a>
+        <a href="#occupation">#occupation</a>
         <a href="#skills">#skills</a>
       </nav>
 
@@ -59,7 +60,7 @@
     -->
     <main>
       
-      <div class="site-title">karlsune portfolio site</div>
+      <div class="site-title">karlsune's portfolio site.</div>
       <div class="site-subtitle" id="site-subtitle" aria-live="polite">
         web developer
       </div>
@@ -97,14 +98,14 @@
         </a>
       </section>
 
-      <section id="job">
-        <h2>#job</h2>
-        <p>none</p>
+      <section id="occupation">
+        <h2>#occupation</h2>
+        <p>student</p>
       </section>
 
-      <section id="skills">
-        <h2>#skills</h2>
-        <ul class="skills-list">
+    <section id="skills">
+      <h2>#skills</h2>
+      <ul class="skills-list">
           <li>html</li>
           <li>css</li>
           <li>js</li>
@@ -115,9 +116,7 @@
           <li>gaming</li>
           <li>web design</li>
         </ul>
-        <ul class="skills-list">
-            <li>commit message poet</li>
-        </ul>
+
       </section>
     </main>
 
