--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio Site | karlsune</title>
     
+    <!-- links -->
     <link rel="icon" href="./icon/icon.ico">
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link
