feat: add simple physics game example with Matter.js integration

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <button id="back-to-top" aria-label="Back to top">⬆️</button>
 
     <!--
-        JAVASCRIPT: Handles theme toggle, mobile menu, and animated subtitle.
+        JAVASCRIPT: Handles mobile menu, data storage, and animated subtitle.
     -->
     <script src="./script/subtitleRender.js"></script>
     <script src="./script/array.js"></script>
