--- a/game/game.html
+++ b/game/game.html
@@ -4,20 +4,26 @@
     You can copy, modify, and distribute this code as long as you comply with the GPLv3 terms.
     See LICENSE.md or https://www.gnu.org/licenses/gpl-3.0.html for details.
 -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <title>physics game example</title>
     <style>
-        body { margin: 0; background: #222; }
-        #gameCanvas { display: block; margin: 0 auto; background: #fff; }
+      body {
+        margin: 0;
+        background: #222;
+      }
+      #gameCanvas {
+        display: block;
+        margin: 0 auto;
+        background: #fff;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
-      <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
-      <script src="script/game.js"></script>
-
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
+    <script src="game.js"></script>
+  </body>
 </html>
