--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio Site | karlsune</title>
+    <title>portfolio site | karlsune</title>
 
     <!-- links -->
     <link rel="icon" href="./icon/icon.ico" />
