--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
         web developer
       </div>
 
+      <!--
+        About Section:
+        This section of the page links to subpages like game/game.js
+      -->
+      <section id="projects">
+        <h2>#projects</h2>
+        <p><a href="karlsune.org">this page</a></p>
+        <p><a href="game/game.html">this matter.js animated page</a></p>
+        <p><a href="https://github.com/karlsune">my github repositories</a></p>
+        <p><a href="https://www.kth.se/en">kth student portal</a></p>
+      </section>
+
       <section id="about">
         <h2>#about</h2>
         <p>karlsune</p>
