change order of sections on html page

--- a/index.html
+++ b/index.html
@@ -64,10 +64,31 @@
         web developer
       </div>
 
+
+            <!--
+        GitHub Profile Stats Embed:
+        This section displays a dynamic card with my GitHub stats.
+        (https://github.com/anuraghazra/github-readme-stats)
+        -->
+
+      <section id="stats">
+        <a
+          href="https://github.com/karlsune"
+          target="_blank"
+          rel="noopener"
+        >
+          <img
+            src="https://github-readme-stats.vercel.app/api?username=karlsune&show_icons=true&theme=default"
+            alt="GitHub stats for karlsune"
+            style="max-width: 100%; display: block; margin: 0 auto"
+          />
+        </a>
+      </section>
+
       <!--
-        About Section:
-        This section of the page links to subpages like game/game.js
-      -->
+        projects section:
+        PROJECTS SECTION:
+        This section showcases links to various projects, including subpages and external resources. -->
       <section id="projects">
         <h2>#projects</h2>
         <p><a href="karlsune.org">this page</a></p>
@@ -88,26 +109,7 @@
         <p>high school diploma</p>
       </section>
 
-      <!--
-        GitHub Profile Stats Embed:
-        This section displays a dynamic card with my GitHub stats.
-        (https://github.com/anuraghazra/github-readme-stats)
-        -->
 
-      <section id="stats">
-        <a
-          id=""
-          href="https://github.com/karlsune"
-          target="_blank"
-          rel="noopener"
-        >
-          <img
-            src="https://github-readme-stats.vercel.app/api?username=karlsune&show_icons=true&theme=default"
-            alt="GitHub stats for karlsune"
-            style="max-width: 100%; display: block; margin: 0 auto"
-          />
-        </a>
-      </section>
 
       <section id="occupation">
         <h2>#occupation</h2>
