update matter.js animation. add links to index.html

--- a/game/game.html
+++ b/game/game.html
@@ -8,7 +8,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>physics game example</title>
+    <title>game.html</title>
     <style>
       body {
         margin: 0;
