fix: update link for under construction project to prevent broken navigation

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h2>#projects</h2>
         <p><a href="karlsune.org">this page</a></p>
         <p><a href="game/game.html">this matter.js animated page</a></p>
-        <p><a href="matterjs-showcase/showcase.html">UNDER CONSTRUCTION</a></p>
+        <p><a href="null">UNDER CONSTRUCTION</a></p>
         <p><a href="https://github.com/karlsune">my github repositories</a></p>
         <p><a href="https://www.kth.se/en">kth student portal</a></p>
       </section>
